feat(document): sign document
add basic sign document feature
